--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,18 @@ langchain-google-genai
 sendgrid
 langchain-openai
 langgraph
+streamlit
+python-dotenv
+
+langchain
+langchain-core
+langchain-openai
+langchain-google-genai
+langgraph
+
+openai
+google-generativeai
+
+sendgrid
+requests
+google-search-results
